@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.984 2009-02-11 05:57:08 castaglia Exp $
+$Id: NEWS,v 1.985 2009-02-11 18:44:19 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -28,6 +28,7 @@ CVS
   backreference handling.
 - Bug 2728 - Support for variables in ServerIdent directive.  The %L, %V,
   and %v variables are now supported for ServerIdent identity strings.
+- Bug 3178 - mod_wrap2 does not handle IPv4-mapped IPv6 addresses.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
